fixed caption alignment on chapter 6

--- a/public/stylesheets/sass/chapters.sass
+++ b/public/stylesheets/sass/chapters.sass
@@ -24,4 +24,4 @@
     li
       margin: 0
     img
-      width: 174px
+      width: 180px
