--- a/public/stylesheets/sass/content.sass
+++ b/public/stylesheets/sass/content.sass
@@ -94,9 +94,11 @@ span.tooltip
   p
     color: $content-color
 
+  // captions below images/videos on righthand side
   p.caption
     background: #e5e7e5
     font-variant: small-caps
     font-size: 0.9em
-    padding: 5px 8px
+    padding: 8px
+    margin: -5px 9px 0 0
 
